updating layout to restrain width to fixed 60rem and always center align the content updating auto-focus to delay 250ms

--- a/app/server/www/app.css
+++ b/app/server/www/app.css
@@ -19226,6 +19226,9 @@ md-tooltip {
 
 html {
   font-size: 16px; }
+  @media screen and (max-width: 600px) {
+    html {
+      font-size: 15px; } }
 
 body {
   background-color: #EFF0F1;
@@ -19266,7 +19269,9 @@ a {
         border-radius: 4rem; } }
 
 .center-panel {
-  max-width: 60rem; }
+  max-width: 60rem;
+  margin-left: auto;
+  margin-right: auto; }
 
 .collapse {
   padding: 0;
