--- a/app/src/assets/_layout.scss
+++ b/app/src/assets/_layout.scss
@@ -1,5 +1,8 @@
 html {
   font-size: $default-font-size;
+  @media screen and (max-width: $layout-breakpoint-xs) {
+    font-size: $xs-font-size;
+  }
 }
 
 body {
@@ -48,12 +51,13 @@ a {
       width: 6rem;
       border-radius: 4rem;
     }
-
   }
 }
 
 .center-panel {
   max-width: $page-width;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .collapse {
@@ -76,6 +80,7 @@ a {
 #header {
   text-transform: uppercase;
   font-weight: 200;
+
   md-menu {
     padding-top: 1.5rem;
     float: right;
