--- a/app/src/assets/_variables.scss
+++ b/app/src/assets/_variables.scss
@@ -1,4 +1,5 @@
 $default-font-size: 16px;
+$xs-font-size: 15px;
 $bold-font-weight: 500;
 $page-width: 60rem;
 $primary-color: #18AEE4;
